<resources>
    <string name="app_name">Test2</string>
    <string name="username">User Name</string>
    <string name="newUser">New user?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
</resources>